Quorum/Library/Tests/TypeChecker/Pass/ExpAssignIntObjUndefined.quorum
class Main
    action Main
        Integer int
        int = cast(Integer, undefined)
        if int = undefined
            output "passed"
        end
    end
end