Quorum/Library/Tests/TypeChecker/Fail/ExpAssignIntegerUndefined.quorum
class Main
    action Main
        integer int = 0
        int = cast(integer, undefined)
    end
end